src/objects/collect__Collection_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>collect__Enable_Lease_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Lease Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Enable_Loan_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Loan Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Namespace_Prefix_Collections__c</fullName>
        <description>Namespace_Prefix_Collections field contains the namespace of the collections package.</description>
        <label>Namespace Prefix Collections</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Collection Settings</label>
</CustomObject>